# meterweb

./: .env.example  Dockerfile  README.md  agents.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_metering_schema.py  0002_add_ocr_fields_to_readings.py
backend/meterweb/: __init__.py  bootstrap.py  main.py  worker.py
backend/meterweb/application/: __init__.py  dto.py  errors.py  ports.py  use_cases.py
backend/meterweb/bootstrap/: __init__.py  container.py
backend/meterweb/domain/: __init__.py  auth.py  building.py  metering.py
backend/meterweb/infrastructure/: __init__.py  auth.py  db.py  repositories.py  settings.py  sqlalchemy_models.py  uow.py
backend/meterweb/interfaces/: __init__.py
backend/meterweb/templates/: base.html  buildings.html  capture_confirm.html  dashboard.html  login.html  monthly_report.html
backend/tests/e2e/: test_mobile_capture_flow.spec.ts
backend/tests/integration/: test_api_v1_extended_endpoints.py  test_csrf_protection.py  test_metering_persistence_paths.py  test_reading_repository_register_scope.py  test_request_validation_errors.py  test_sqlite_foreign_keys.py  test_vertical_slice.py
backend/tests/unit/: test_auth_router_client_ip.py  test_auth_security.py  test_building_domain.py  test_consumption_analytics_use_case.py  test_create_meter_point_with_defaults_use_case.py  test_export_use_case.py  test_http_error_handling.py  test_localization_templates.py  test_main_feature_health.py  test_metering_advanced_domain.py  (+13 more)
(+50 files in other folders)
